--- a/ctown4.ipynb
+++ b/ctown4.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensors=[col for col in train_normal.columns if col not in ['DATETIME','ATT_FLAG']]\n"
+    "sensors=[col for col in train_normal.columns if col not in ['DATETIME','ATT_FLAG']] "
    ]
   },
   {
@@ -1336,7 +1336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
