--- a/ctown8(onlycorr+minmax).ipynb
+++ b/ctown8(onlycorr+minmax).ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -133,7 +144,7 @@
     "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -150,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "array([1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
        "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
@@ -176,10 +187,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.8\n",
-      "Precision  0.7735849056603774\n",
+      "Accuracy  0.7764705882352941\n",
+      "Precision  0.7454545454545455\n",
       "Recall  0.8913043478260869\n",
-      "F1-score  0.8282828282828283\n"
+      "F1-score  0.8118811881188119\n"
      ]
     }
    ],
@@ -199,10 +210,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5400820793433654 Median : 0.5294117647058824 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
-      "precision - Mean: 0.7580538790255112 Median : 0.9 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.16632962588473205 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
-      "f1 -        Mean: 0.2643874650348076 Median : 0.2592592592592593 Min : 0.0 Max : 0.5396825396825397\n"
+      "Accuracy -  Mean: 0.5384404924760603 Median : 0.5411764705882353 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
+      "precision - Mean: 0.7453350505064091 Median : 0.8888888888888888 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.16582406471183012 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
+      "f1 -        Mean: 0.26367356519897334 Median : 0.2641509433962264 Min : 0.0 Max : 0.5396825396825397\n"
      ]
     }
    ],
@@ -224,57 +235,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensor_models = []\n",
     "sensor_predicted = []\n",
@@ -283,14 +244,13 @@
     "recall = []\n",
     "fscore = []\n",
     "for i,sens in enumerate(sensors):\n",
-    "    print(i)\n",
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride,optimal_k=2,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -308,7 +268,7 @@
      "data": {
       "text/plain": [
        "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
@@ -333,10 +293,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7529411764705882\n",
-      "Precision  0.6923076923076923\n",
+      "Accuracy  0.7647058823529411\n",
+      "Precision  0.703125\n",
       "Recall  0.9782608695652174\n",
-      "F1-score  0.8108108108108107\n"
+      "F1-score  0.8181818181818182\n"
      ]
     }
    ],
@@ -356,10 +316,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5636114911080712 Median : 0.5529411764705883 Min : 0.4588235294117647 Max : 0.7647058823529411\n",
-      "precision - Mean: 0.6510438780435954 Median : 0.8461538461538461 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.2264914054600607 Median : 0.1956521739130435 Min : 0.0 Max : 0.6304347826086957\n",
-      "f1 -        Mean: 0.32011124151508663 Median : 0.3214285714285714 Min : 0.0 Max : 0.7435897435897436\n"
+      "Accuracy -  Mean: 0.5630642954856362 Median : 0.5411764705882353 Min : 0.4588235294117647 Max : 0.7647058823529411\n",
+      "precision - Mean: 0.6426257179328683 Median : 0.8333333333333334 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.2259858442871587 Median : 0.1956521739130435 Min : 0.0 Max : 0.6304347826086957\n",
+      "f1 -        Mean: 0.3204265429594116 Median : 0.3157894736842105 Min : 0.0 Max : 0.7435897435897436\n"
      ]
     }
    ],
@@ -403,57 +363,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensor_models = []\n",
     "sensor_predicted = []\n",
@@ -462,14 +372,13 @@
     "recall = []\n",
     "fscore = []\n",
     "for i,sens in enumerate(sensors):\n",
-    "    print(i)\n",
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride,optimal_k=1,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T,only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -535,10 +444,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6070451436388509 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
-      "precision - Mean: 0.5817183462532299 Median : 0.75 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.10505212510024056 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
-      "f1 -        Mean: 0.17206490223507054 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
+      "Accuracy -  Mean: 0.6060191518467853 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
+      "precision - Mean: 0.5751291989664082 Median : 0.75 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.10425020048115478 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
+      "f1 -        Mean: 0.17088663367686682 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
      ]
     }
    ],
@@ -561,57 +470,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensor_models = []\n",
     "sensor_predicted = []\n",
@@ -620,14 +479,13 @@
     "recall = []\n",
     "fscore = []\n",
     "for i,sens in enumerate(sensors):\n",
-    "    print(i)\n",
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride,optimal_k=2,tune=False,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T,only_corr=True)\n",
     "    test = X_test.loc[:,sens].values\n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -644,8 +502,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1])"
       ]
@@ -670,10 +528,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7794117647058824\n",
-      "Precision  0.6666666666666666\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.7887323943661971\n"
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.627906976744186\n",
+      "Recall  0.9310344827586207\n",
+      "F1-score  0.7499999999999999\n"
      ]
     }
    ],
@@ -693,10 +551,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6176470588235294 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
-      "precision - Mean: 0.559824753070307 Median : 0.7 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.14675220529270247 Median : 0.10344827586206896 Min : 0.0 Max : 0.4482758620689655\n",
-      "f1 -        Mean: 0.22169022169067001 Median : 0.18181818181818182 Min : 0.0 Max : 0.5777777777777777\n"
+      "Accuracy -  Mean: 0.6186730506155951 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.5540526694767461 Median : 0.7142857142857143 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.14915797914995987 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
+      "f1 -        Mean: 0.2250618842299115 Median : 0.1875 Min : 0.0 Max : 0.608695652173913\n"
      ]
     }
    ],
@@ -718,57 +576,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sensor_models = []\n",
     "sensor_predicted = []\n",
@@ -777,14 +585,13 @@
     "recall = []\n",
     "fscore = []\n",
     "for i,sens in enumerate(sensors):\n",
-    "    print(i)\n",
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride,optimal_k=2,kscore_init='inertia',corr_normal=corr_normal[:,i].reshape(nolag_normal,len(X_normal.columns)).T,\n",
     "              corr_attack=corr_attack[:,i].reshape(nolag_attack,len(X_attack.columns)).T,only_corr=True)\n",
     "    test = X_test.loc[:,sens].values    \n",
-    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T,only_corr=True)\n",
+    "    y_predicted = model.predict(test,corr_test=corr_test[:,i].reshape(nolag_test,len(X_normal.columns)).T)\n",
     "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
@@ -801,8 +608,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1])"
       ]
@@ -827,10 +634,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.75\n",
-      "Precision  0.6363636363636364\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.7671232876712328\n"
+      "Accuracy  0.7352941176470589\n",
+      "Precision  0.627906976744186\n",
+      "Recall  0.9310344827586207\n",
+      "F1-score  0.7499999999999999\n"
      ]
     }
    ],
@@ -850,10 +657,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.61593707250342 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7205882352941176\n",
-      "precision - Mean: 0.5589138422756754 Median : 0.7 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.14514835605453086 Median : 0.10344827586206896 Min : 0.0 Max : 0.4482758620689655\n",
-      "f1 -        Mean: 0.21967630275500616 Median : 0.18181818181818182 Min : 0.0 Max : 0.5777777777777777\n"
+      "Accuracy -  Mean: 0.6186730506155951 Median : 0.6029411764705882 Min : 0.5588235294117647 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.5515036529058417 Median : 0.7 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.1499599037690457 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
+      "f1 -        Mean: 0.22680565269527156 Median : 0.18181818181818182 Min : 0.0 Max : 0.608695652173913\n"
      ]
     }
    ],
@@ -888,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
