--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -141,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
+       "array([1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 10,
@@ -167,10 +156,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.788235294117647\n",
-      "Precision  0.7592592592592593\n",
-      "Recall  0.8913043478260869\n",
-      "F1-score  0.8200000000000001\n"
+      "Accuracy  0.8117647058823529\n",
+      "Precision  0.8\n",
+      "Recall  0.8695652173913043\n",
+      "F1-score  0.8333333333333333\n"
      ]
     }
    ],
@@ -190,10 +179,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.49958960328317376 Median : 0.49411764705882355 Min : 0.4588235294117647 Max : 0.6\n",
-      "precision - Mean: 0.6701592980662747 Median : 0.875 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08594539939332659 Median : 0.06521739130434782 Min : 0.0 Max : 0.32608695652173914\n",
-      "f1 -        Mean: 0.1457692603201236 Median : 0.12244897959183672 Min : 0.0 Max : 0.4516129032258065\n"
+      "Accuracy -  Mean: 0.5028727770177839 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.611764705882353\n",
+      "precision - Mean: 0.6870985603543743 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08897876643073811 Median : 0.08695652173913043 Min : 0.0 Max : 0.30434782608695654\n",
+      "f1 -        Mean: 0.15279367857380563 Median : 0.16 Min : 0.0 Max : 0.45901639344262296\n"
      ]
     }
    ],
@@ -247,9 +236,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
@@ -273,10 +262,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5529411764705883\n",
-      "Precision  0.5476190476190477\n",
+      "Accuracy  0.5882352941176471\n",
+      "Precision  0.5679012345679012\n",
       "Recall  1.0\n",
-      "F1-score  0.7076923076923077\n"
+      "F1-score  0.7244094488188977\n"
      ]
     }
    ],
@@ -296,10 +285,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5176470588235295 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6352941176470588\n",
-      "precision - Mean: 0.5622794577151341 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.1698685540950455 Median : 0.13043478260869565 Min : 0.0 Max : 0.4782608695652174\n",
-      "f1 -        Mean: 0.2481682356690804 Median : 0.22641509433962262 Min : 0.0 Max : 0.5789473684210527\n"
+      "Accuracy -  Mean: 0.522298221614227 Median : 0.5058823529411764 Min : 0.4588235294117647 Max : 0.6588235294117647\n",
+      "precision - Mean: 0.5806200208262209 Median : 0.7142857142857143 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.18402426693629934 Median : 0.1956521739130435 Min : 0.0 Max : 0.5\n",
+      "f1 -        Mean: 0.2619444934588611 Median : 0.3050847457627119 Min : 0.0 Max : 0.5750000000000001\n"
      ]
     }
    ],
@@ -374,8 +363,8 @@
      "data": {
       "text/plain": [
        "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
@@ -399,10 +388,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.4411764705882353\n",
-      "Precision  0.4307692307692308\n",
-      "Recall  0.9655172413793104\n",
-      "F1-score  0.5957446808510639\n"
+      "Accuracy  0.45588235294117646\n",
+      "Precision  0.4393939393939394\n",
+      "Recall  1.0\n",
+      "F1-score  0.6105263157894737\n"
      ]
     }
    ],
@@ -422,10 +411,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5841313269493843 Median : 0.5735294117647058 Min : 0.5147058823529411 Max : 0.6911764705882353\n",
-      "precision - Mean: 0.37905982905982905 Median : 0.4444444444444444 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.12991178829190056 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
-      "f1 -        Mean: 0.18451222687777158 Median : 0.16216216216216217 Min : 0.0 Max : 0.5714285714285714\n"
+      "Accuracy -  Mean: 0.5762653898768809 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6617647058823529\n",
+      "precision - Mean: 0.39886973131987175 Median : 0.4 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.12670408981555734 Median : 0.10344827586206896 Min : 0.0 Max : 0.3793103448275862\n",
+      "f1 -        Mean: 0.18137573125642328 Median : 0.18181818181818182 Min : 0.0 Max : 0.46511627906976755\n"
      ]
     }
    ],
@@ -479,9 +468,9 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1])"
       ]
      },
@@ -505,10 +494,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.4852941176470588\n",
-      "Precision  0.453125\n",
+      "Accuracy  0.4411764705882353\n",
+      "Precision  0.43283582089552236\n",
       "Recall  1.0\n",
-      "F1-score  0.6236559139784946\n"
+      "F1-score  0.6041666666666666\n"
      ]
     }
    ],
@@ -528,10 +517,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5725034199726403 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.6617647058823529\n",
-      "precision - Mean: 0.3278584017481706 Median : 0.38461538461538464 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.12750601443464313 Median : 0.10344827586206896 Min : 0.0 Max : 0.41379310344827586\n",
-      "f1 -        Mean: 0.17562608724937176 Median : 0.16666666666666663 Min : 0.0 Max : 0.5\n"
+      "Accuracy -  Mean: 0.5687414500683996 Median : 0.5735294117647058 Min : 0.4411764705882353 Max : 0.7058823529411765\n",
+      "precision - Mean: 0.3611807137510932 Median : 0.375 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.12910986367281474 Median : 0.10344827586206896 Min : 0.0 Max : 0.3793103448275862\n",
+      "f1 -        Mean: 0.18279017817659066 Median : 0.16216216216216217 Min : 0.0 Max : 0.5238095238095238\n"
      ]
     }
    ],
@@ -550,8 +539,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1.00115335, 1.00043341, 1.00177992, 1.00000172, 1.00354943,\n",
-       "       0.99999847, 1.00138197, 1.00012591])"
+       "array([1.0073031 , 1.00000326, 1.00223529, 1.00378047, 1.00301197,\n",
+       "       1.01028753, 1.00388359, 1.05953127])"
       ]
      },
      "execution_count": 27,
@@ -607,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
