--- a/ctown8(onlycorr+minmax).ipynb
+++ b/ctown8(onlycorr+minmax).ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -161,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "array([0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
        "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
@@ -187,10 +176,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7764705882352941\n",
-      "Precision  0.7454545454545455\n",
+      "Accuracy  0.8\n",
+      "Precision  0.7735849056603774\n",
       "Recall  0.8913043478260869\n",
-      "F1-score  0.8118811881188119\n"
+      "F1-score  0.8282828282828283\n"
      ]
     }
    ],
@@ -210,10 +199,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5384404924760603 Median : 0.5411764705882353 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
-      "precision - Mean: 0.7453350505064091 Median : 0.8888888888888888 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.16582406471183012 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
-      "f1 -        Mean: 0.26367356519897334 Median : 0.2641509433962264 Min : 0.0 Max : 0.5396825396825397\n"
+      "Accuracy -  Mean: 0.5400820793433654 Median : 0.5294117647058824 Min : 0.4235294117647059 Max : 0.6588235294117647\n",
+      "precision - Mean: 0.7512091733435963 Median : 0.9 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.16683518705763395 Median : 0.15217391304347827 Min : 0.0 Max : 0.3695652173913043\n",
+      "f1 -        Mean: 0.265077741608589 Median : 0.2592592592592593 Min : 0.0 Max : 0.5396825396825397\n"
      ]
     }
    ],
@@ -268,8 +257,8 @@
      "data": {
       "text/plain": [
        "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
@@ -316,10 +305,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5630642954856362 Median : 0.5411764705882353 Min : 0.4588235294117647 Max : 0.7647058823529411\n",
-      "precision - Mean: 0.6426257179328683 Median : 0.8333333333333334 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.2259858442871587 Median : 0.1956521739130435 Min : 0.0 Max : 0.6304347826086957\n",
-      "f1 -        Mean: 0.3204265429594116 Median : 0.3157894736842105 Min : 0.0 Max : 0.7435897435897436\n"
+      "Accuracy -  Mean: 0.5641586867305062 Median : 0.5411764705882353 Min : 0.4588235294117647 Max : 0.7647058823529411\n",
+      "precision - Mean: 0.6433259062065425 Median : 0.8181818181818182 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.22851365015166833 Median : 0.1956521739130435 Min : 0.0 Max : 0.6304347826086957\n",
+      "f1 -        Mean: 0.3226602827274325 Median : 0.3157894736842105 Min : 0.0 Max : 0.7435897435897436\n"
      ]
     }
    ],
@@ -444,10 +433,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6060191518467853 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
-      "precision - Mean: 0.5751291989664082 Median : 0.75 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.10425020048115478 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
-      "f1 -        Mean: 0.17088663367686682 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
+      "Accuracy -  Mean: 0.607045143638851 Median : 0.6029411764705882 Min : 0.5294117647058824 Max : 0.7058823529411765\n",
+      "precision - Mean: 0.5822351421188631 Median : 0.75 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.10505212510024056 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
+      "f1 -        Mean: 0.1715874549380236 Median : 0.12903225806451613 Min : 0.0 Max : 0.4736842105263158\n"
      ]
     }
    ],
@@ -502,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1,\n",
        "       1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1])"
@@ -528,10 +517,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7352941176470589\n",
-      "Precision  0.627906976744186\n",
+      "Accuracy  0.7205882352941176\n",
+      "Precision  0.6136363636363636\n",
       "Recall  0.9310344827586207\n",
-      "F1-score  0.7499999999999999\n"
+      "F1-score  0.7397260273972602\n"
      ]
     }
    ],
@@ -551,10 +540,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6186730506155951 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
-      "precision - Mean: 0.5540526694767461 Median : 0.7142857142857143 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.14915797914995987 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
-      "f1 -        Mean: 0.2250618842299115 Median : 0.1875 Min : 0.0 Max : 0.608695652173913\n"
+      "Accuracy -  Mean: 0.6166210670314638 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.5560538469738195 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.14514835605453086 Median : 0.10344827586206896 Min : 0.0 Max : 0.4482758620689655\n",
+      "f1 -        Mean: 0.21997042278722023 Median : 0.17142857142857143 Min : 0.0 Max : 0.5777777777777777\n"
      ]
     }
    ],
@@ -608,8 +597,8 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "array([1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
        "       1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
        "       0, 1])"
       ]
@@ -634,10 +623,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.7352941176470589\n",
-      "Precision  0.627906976744186\n",
-      "Recall  0.9310344827586207\n",
-      "F1-score  0.7499999999999999\n"
+      "Accuracy  0.75\n",
+      "Precision  0.6363636363636364\n",
+      "Recall  0.9655172413793104\n",
+      "F1-score  0.7671232876712328\n"
      ]
     }
    ],
@@ -657,10 +646,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.6186730506155951 Median : 0.6029411764705882 Min : 0.5588235294117647 Max : 0.7352941176470589\n",
-      "precision - Mean: 0.5515036529058417 Median : 0.7 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.1499599037690457 Median : 0.10344827586206896 Min : 0.0 Max : 0.4827586206896552\n",
-      "f1 -        Mean: 0.22680565269527156 Median : 0.18181818181818182 Min : 0.0 Max : 0.608695652173913\n"
+      "Accuracy -  Mean: 0.6169630642954856 Median : 0.6029411764705882 Min : 0.5441176470588235 Max : 0.7352941176470589\n",
+      "precision - Mean: 0.5729088588869711 Median : 0.7058823529411765 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.14514835605453086 Median : 0.10344827586206896 Min : 0.0 Max : 0.41379310344827586\n",
+      "f1 -        Mean: 0.22137038413445007 Median : 0.1875 Min : 0.0 Max : 0.5499999999999999\n"
      ]
     }
    ],
@@ -670,13 +659,6 @@
     "print(\"recall -    Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(recall).mean(), np.median(np.asarray(recall)),np.asarray(recall).min(), np.asarray(recall).max()))\n",
     "print(\"f1 -        Mean: {} Median : {} Min : {} Max : {}\".format(np.asarray(fscore).mean(), np.median(np.asarray(fscore)),np.asarray(fscore).min(), np.asarray(fscore).max()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
