--- a/ctown9.ipynb
+++ b/ctown9.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from models import Pipeline,Hankel\n",
+    "from models import Pipeline,Hankel,Robustcluster\n",
     "from sklearn.linear_model import LinearRegression,LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import tensorflow as tf\n",
@@ -37,6 +37,73 @@
     "df2 = pd.read_csv('~/data/ctown/dataset04.csv')\n",
     "df = pd.concat((df1,df2),axis=0,ignore_index=True)\n",
     "df_test = pd.read_csv('~/data/ctown/test_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hankel = Hankel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rc = Robustcluster()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.36558512 3.42269625 3.46236214 3.48702721 3.50598137 3.52631154\n",
+      "  3.56445123 3.59523499 3.62272629 3.59477496 3.54197885 3.49145292\n",
+      "  3.44969609 3.3984219  3.3088923  3.16781702 2.9762093  2.79282766\n",
+      "  2.63332266 2.4805853  2.33268873 2.170742   2.00541803 1.86131158\n",
+      "  1.74165659 1.6444622  1.55952196 1.48368508 1.43363638 1.43351349\n",
+      "  1.47723619 1.55511236 1.63771315 1.72924575 1.83986964 1.95936192\n",
+      "  2.08045582 2.20819496 2.31922499 2.41314157 2.48458888 2.55163891\n",
+      "  2.64531965 2.76262198 2.88026135 2.97535354 3.0758568  3.17857768\n",
+      "  3.27248427 3.37719246 3.47792813 3.53470605 3.54737852 3.57980956\n",
+      "  3.60557982 3.6384584  3.65569911 3.59635214 3.51782445 3.4440763 ]\n",
+      " [2.23294227 2.09720507 1.97013248 1.83502513 1.70970897 1.62085634\n",
+      "  1.56026801 1.52651074 1.50888901 1.50905835 1.53121064 1.59778135\n",
+      "  1.68880341 1.80771128 1.94249485 2.07860702 2.21317289 2.33253086\n",
+      "  2.45086339 2.58030644 2.70255879 2.78983518 2.84957356 2.92366702\n",
+      "  3.00767386 3.09749672 3.18901487 3.25393281 3.31527937 3.37617983\n",
+      "  3.45318796 3.5332374  3.60019333 3.64952069 3.68266464 3.71364038\n",
+      "  3.74933463 3.76035223 3.76604837 3.73388517 3.67779086 3.62702173\n",
+      "  3.58756293 3.54586442 3.47191967 3.35601628 3.19418333 3.03335657\n",
+      "  2.89952658 2.76618217 2.63223518 2.48193385 2.32821731 2.19383369\n",
+      "  2.08022248 1.97939283 1.88379029 1.78405488 1.70528458 1.66606062]\n",
+      " [2.15779054 2.30827691 2.43086866 2.53525543 2.61829605 2.69411519\n",
+      "  2.77596959 2.84908373 2.90636248 2.93529232 2.94460155 2.92551775\n",
+      "  2.93401784 2.95736695 2.97736515 3.00054067 3.06109149 3.1491374\n",
+      "  3.25549706 3.37995688 3.50589332 3.61912327 3.71404032 3.80949254\n",
+      "  3.87617451 3.95344061 3.9745114  3.88311729 3.71450948 3.53578401\n",
+      "  3.3601677  3.16500686 2.92993834 2.6530187  2.3624762  2.09842589\n",
+      "  1.87671364 1.70316828 1.55994176 1.43023512 1.34716863 1.31189045\n",
+      "  1.30635608 1.30386737 1.30612634 1.34641651 1.41779427 1.50001057\n",
+      "  1.59996633 1.72089005 1.85198259 1.9904259  2.13596264 2.28294428\n",
+      "  2.42275169 2.57467695 2.70157622 2.79626168 2.8657101  2.92621455]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = df.iloc[:,1].values\n",
+    "X_train = hankel.fit(X_train,lag=60)\n",
+    "X_train = X_train.T\n",
+    "centre,label = rc.fit(X_train,3,.04)"
    ]
   },
   {
