--- a/te3.ipynb
+++ b/te3.ipynb
@@ -814,7 +814,7 @@
    "outputs": [],
    "source": [
     "hankel = Hankel()\n",
-    "lag = 160\n",
+    "lag = 360\n",
     "stride = 0.5"
    ]
   },
@@ -1384,24 +1384,14 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
-       "       0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0,\n",
-       "       0])"
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 14,
@@ -1424,10 +1414,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5546666666666666\n",
-      "Precision  1.0\n",
-      "Recall  0.5412087912087912\n",
-      "F1-score  0.7023172905525847\n"
+      "Accuracy  0.963855421686747\n",
+      "Precision  0.975609756097561\n",
+      "Recall  0.9876543209876543\n",
+      "F1-score  0.9815950920245398\n"
      ]
     }
    ],
@@ -1447,10 +1437,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.10676923076923076 Median : 0.10533333333333333 Min : 0.04533333333333334 Max : 0.16\n",
-      "precision - Mean: 1.0 Median : 1.0 Min : 1.0 Max : 1.0\n",
-      "recall -    Mean: 0.0797759932375317 Median : 0.0782967032967033 Min : 0.016483516483516484 Max : 0.1346153846153846\n",
-      "f1 -        Mean: 0.14649868554300108 Median : 0.14521992002908035 Min : 0.032432432432432434 Max : 0.23728813559322035\n"
+      "Accuracy -  Mean: 0.2297265987025023 Median : 0.14457831325301204 Min : 0.07228915662650602 Max : 0.9036144578313253\n",
+      "precision - Mean: 0.9964247620284772 Median : 1.0 Min : 0.9663865546218487 Max : 1.0\n",
+      "recall -    Mean: 0.21379392212725548 Median : 0.12345679012345678 Min : 0.04938271604938271 Max : 0.9259259259259259\n",
+      "f1 -        Mean: 0.2991497427971798 Median : 0.21978021978021975 Min : 0.09411764705882353 Max : 0.949367088607595\n"
      ]
     }
    ],
@@ -1563,24 +1553,14 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1])"
+       "array([0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0,\n",
+       "       0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1,\n",
+       "       1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0,\n",
+       "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1])"
       ]
      },
      "execution_count": 18,
@@ -1603,10 +1583,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.96\n",
-      "Precision  0.9703504043126685\n",
-      "Recall  0.989010989010989\n",
-      "F1-score  0.979591836734694\n"
+      "Accuracy  0.7650602409638554\n",
+      "Precision  0.992\n",
+      "Recall  0.7654320987654321\n",
+      "F1-score  0.8641114982578397\n"
      ]
     }
    ],
@@ -1626,10 +1606,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.17866666666666667 Median : 0.13733333333333334 Min : 0.072 Max : 0.688\n",
-      "precision - Mean: 0.9959520916032005 Median : 1.0 Min : 0.9634146341463414 Max : 1.0\n",
-      "recall -    Mean: 0.15601225697379545 Median : 0.11126373626373626 Min : 0.04395604395604396 Max : 0.7032967032967034\n",
-      "f1 -        Mean: 0.24402280403448892 Median : 0.20024446889133357 Min : 0.08421052631578947 Max : 0.8139904610492847\n"
+      "Accuracy -  Mean: 0.12812789620018536 Median : 0.1144578313253012 Min : 0.024096385542168676 Max : 0.4939759036144578\n",
+      "precision - Mean: 0.8843749999999999 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.10671889838556507 Median : 0.09259259259259259 Min : 0.0 Max : 0.4876543209876543\n",
+      "f1 -        Mean: 0.18354860073205786 Median : 0.1694915254237288 Min : 0.0 Max : 0.6528925619834711\n"
      ]
     }
    ],
@@ -1702,18 +1682,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 0, 0])"
+       "array([0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0,\n",
+       "       0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1,\n",
+       "       0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0])"
       ]
      },
      "execution_count": 24,
@@ -1736,10 +1709,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.948\n",
-      "Precision  0.9556451612903226\n",
-      "Recall  0.9916317991631799\n",
-      "F1-score  0.973305954825462\n"
+      "Accuracy  0.7909090909090909\n",
+      "Precision  0.9770114942528736\n",
+      "Recall  0.8018867924528302\n",
+      "F1-score  0.8808290155440415\n"
      ]
     }
    ],
@@ -1759,10 +1732,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.191 Median : 0.148 Min : 0.084 Max : 0.704\n",
-      "precision - Mean: 0.9944347704830828 Median : 1.0 Min : 0.9493670886075949 Max : 1.0\n",
-      "recall -    Mean: 0.15690376569037653 Median : 0.1087866108786611 Min : 0.04184100418410042 Max : 0.7238493723849372\n",
-      "f1 -        Mean: 0.2426247428510842 Median : 0.19622641509433963 Min : 0.08032128514056225 Max : 0.8238095238095238\n"
+      "Accuracy -  Mean: 0.1381118881118881 Median : 0.12727272727272726 Min : 0.03636363636363636 Max : 0.5454545454545454\n",
+      "precision - Mean: 0.883974358974359 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.10595065312046445 Median : 0.09433962264150944 Min : 0.0 Max : 0.5471698113207547\n",
+      "f1 -        Mean: 0.18076853107854943 Median : 0.1724137931034483 Min : 0.0 Max : 0.6987951807228916\n"
      ]
     }
    ],
@@ -1819,14 +1792,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1])"
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 28,
@@ -1849,10 +1815,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.956\n",
-      "Precision  0.956\n",
+      "Accuracy  0.9636363636363636\n",
+      "Precision  0.9636363636363636\n",
       "Recall  1.0\n",
-      "F1-score  0.9775051124744376\n"
+      "F1-score  0.9814814814814815\n"
      ]
     }
    ],
@@ -1865,17 +1831,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.633846153846154 Median : 0.708 Min : 0.1 Max : 0.956\n",
-      "precision - Mean: 0.9666178460936425 Median : 0.958359133126935 Min : 0.9483870967741935 Max : 1.0\n",
-      "recall -    Mean: 0.6441905374959768 Median : 0.7259414225941423 Min : 0.058577405857740586 Max : 1.0\n",
-      "f1 -        Mean: 0.7187696192851077 Median : 0.8255297811358598 Min : 0.11067193675889328 Max : 0.9775051124744376\n"
+      "Accuracy -  Mean: 0.6627622377622377 Median : 0.7636363636363637 Min : 0.17272727272727273 Max : 0.9636363636363636\n",
+      "precision - Mean: 0.976861089394035 Median : 0.9728048780487805 Min : 0.9375 Max : 1.0\n",
+      "recall -    Mean: 0.6698113207547168 Median : 0.7735849056603774 Min : 0.14150943396226415 Max : 1.0\n",
+      "f1 -        Mean: 0.7514226591271013 Median : 0.8631818055901825 Min : 0.24793388429752064 Max : 0.9814814814814815\n"
      ]
     }
    ],
